--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script type="module" src="/src/index.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </html>
