--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="src/components/pic.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using @vitejs/plugin-react"
-    />
-    <link rel="apple-touch-icon" href="src/components/pic.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="/manifest.json" />
-    <title>PRECIOUS ADEDOKUN | INNOVATIVE CODE DEVELOPER</title>
+  <head>  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Primary Meta Tags -->
+    <title>APCodeSphere - Full Stack Developer & Tech Expert</title>
+    <meta name="title" content="APCodeSphere - Full Stack Developer & Tech Expert">
+    <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://apcodesphere.vercel.app/">
+    <meta property="og:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
+    <meta property="og:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
+    <meta property="og:image" content="./src/components/logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://apcodesphere.vercel.app/">
+    <meta property="twitter:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
+    <meta property="twitter:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
+    <meta property="twitter:image" content="./src/components/logo.jpg">
+
+    <!-- Keywords (Optional but Useful) -->
+    <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO">
+    
+    <!-- Author -->
+    <meta name="author" content="Precious Adedokun">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./src/components/logo.jpg">
+
+    <!-- Robots (SEO Indexing) -->
+    <meta name="robots" content="index, follow">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
