--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <!-- Robots (SEO Indexing) -->
     <meta name="robots" content="index, follow">
+  <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
