--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://apcodesphere.vercel.app/">
     <meta property="og:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta property="og:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
-    <meta property="og:image" content="./src/components/logo.jpg">
+    <meta property="og:image" content="./src/components/pic.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://apcodesphere.vercel.app/">
     <meta property="twitter:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta property="twitter:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
-    <meta property="twitter:image" content="./src/components/logo.jpg">
+    <meta property="twitter:image" content="./src/components/pic.jpg">
 
     <!-- Keywords (Optional but Useful) -->
     <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO">
@@ -30,7 +30,7 @@
     <meta name="author" content="Precious Adedokun">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./src/components/logo.jpg">
+    <link rel="icon" type="image/png" href="./src/components/pic.jpg">
 
     <!-- Robots (SEO Indexing) -->
     <meta name="robots" content="index, follow">
