--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Primary Meta Tags -->
-    <title>APCodeSphere - Full Stack Developer & Tech Expert</title>
+    <title>Precious Adedokun- Innovative Code Developer </title>
     <meta name="title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
 
@@ -51,5 +51,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    ></script>
   <script type="module" src="/src/main.jsx"></script>
 </html>
