--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Primary Meta Tags -->
     <title>Precious Adedokun- Innovative Code Developer </title>
-    <meta name="title" content="APCodeSphere - Full Stack Developer & Tech Expert">
+    <meta name="title" content="Precious Adedokun- Innovative Code Developer">
     <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
 <link
       rel="stylesheet"
