--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://apcodesphere.vercel.app/">
-    <meta property="og:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
+    <meta property="og:title" content="Precious Adedokun- Innovative Code Developer">
     <meta property="og:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
-    <meta property="og:image" content="IMG-20250317-WA0048(1).jpg">
+    <meta property="og:image" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="IMG-20250317-WA0048(1).jpg">
+    <meta property="twitter:card" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg>
     <meta property="twitter:url" content="https://apcodesphere.vercel.app/">
     <meta property="twitter:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta property="twitter:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
-    <meta property="twitter:image" content="IMG-20250317-WA0048(1).jpg">
+    <meta property="twitter:image" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
     <!-- Keywords (Optional but Useful) -->
     <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO">
@@ -39,7 +39,7 @@
     <meta name="author" content="Precious Adedokun">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="IMG-20250317-WA0048(1).jpg">
+    <link rel="icon" type="image/png" href="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
     <!-- Robots (SEO Indexing) -->
     <meta name="robots" content="index, follow">
