--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg>
+    <meta property="twitter:card" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
     <meta property="twitter:url" content="https://apcodesphere.vercel.app/">
     <meta property="twitter:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta property="twitter:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
