--- a/index.html
+++ b/index.html
@@ -1,70 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>  <meta charset="UTF-8">
+<head>  
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Primary Meta Tags -->
-    <title>Precious Adedokun- Innovative Code Developer </title>
-    <meta name="title" content="Precious Adedokun- Innovative Code Developer">
+    <title>Precious Adedokun - Innovative Code Developer</title>
+    <meta name="title" content="Precious Adedokun - Innovative Code Developer">
     <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
-<link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-    />
+
+    <!-- SEO Improvements -->
+    <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO">
+    <meta name="author" content="Precious Adedokun">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://apcodesphere.vercel.app/">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://apcodesphere.vercel.app/">
-    <meta property="og:title" content="Precious Adedokun- Innovative Code Developer">
+    <meta property="og:title" content="Precious Adedokun - Innovative Code Developer">
     <meta property="og:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
     <meta property="og:image" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://apcodesphere.vercel.app/">
     <meta property="twitter:title" content="APCodeSphere - Full Stack Developer & Tech Expert">
     <meta property="twitter:description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
     <meta property="twitter:image" content="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
-    <!-- Keywords (Optional but Useful) -->
-    <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO">
-    
-    <!-- Author -->
-    <meta name="author" content="Precious Adedokun">
-    
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://apcodesphere.vercel.app/assets/logoo-CdK3M2XC.jpg">
 
-    <!-- Robots (SEO Indexing) -->
-    <meta name="robots" content="index, follow">
-  <!-- Font Awesome CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  </head>
-  <body>
+    <!-- External Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Scripts (Ensure jQuery loads before Slick) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body><script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    ></script>
-    <!-- Slick Carousel JS -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-    ></script>
-  <script type="module" src="/src/main.jsx"></script>
+    <!-- React App -->
+    <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
