--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Primary Meta Tags -->
-    <title>Precious Adedokun - Innovative Code Developer</title>
+    <title>Precious Adedokun | Innovative Code Developer</title>
     <meta name="title" content="Precious Adedokun - Innovative Code Developer">
     <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
 
