--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+<meta name="google-site-verification" content="IpcC_Tfts9ceD-SwOWmXxl342CbvX9vL0emN8yLQ74Q" />
+    
     <!-- Primary Meta Tags -->
     <title>Precious Adedokun | Innovative Code Developer</title>
     <meta name="title" content="Precious Adedokun - Innovative Code Developer">
