--- a/index.html
+++ b/index.html
@@ -49,5 +49,73 @@
 
     <!-- React App -->
     <script type="module" src="/src/main.jsx"></script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "APCodeSphere",
+  "url": "https://apcodesphere.vercel.app",
+  "description": "APCodeSphere is a full-stack developer, cybersecurity expert, and AI enthusiast offering web development, cybersecurity training, and programming mentorship.",
+  "sameAs": [
+    "https://twitter.com/apcodesphere",
+    "https://www.linkedin.com/in/apcodesphere",
+    "https://github.com/apreezofficial"
+  ],
+  "jobTitle": "Full-Stack Developer & Cybersecurity Expert",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "APCodeSphere Tech"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Who is APCodeSphere?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "APCodeSphere is a full-stack developer, cybersecurity expert, and AI enthusiast who specializes in web development, cybersecurity training, and programming mentorship."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What services does APCodeSphere provide?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "APCodeSphere offers services in full-stack development, cybersecurity consulting, AI-powered solutions, and programming education."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How can I learn from APCodeSphere?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "You can learn from APCodeSphere through online courses, mentorship programs, and detailed tech articles available on the website."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does APCodeSphere offer mentorship programs?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, APCodeSphere provides mentorship programs for aspiring developers and cybersecurity professionals."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How can I contact APCodeSphere?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "You can contact APCodeSphere through social media platforms such as Twitter (@apcodesphere), LinkedIn, and GitHub."
+      }
+    }
+  ]
+}
+</script>
 </body>
 </html>
