--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="I build, teach, and design tech solutions. From front-end to back-end, automation, AI, game dev, and cybersecurity. Let's innovate together!">
 
     <!-- SEO Improvements -->
-    <meta name="keywords" content="APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO, best web developer in nigeria, robisson honour, whakee, apreeez, apreezofficial, ap, apcodesphere">
+    <meta name="keywords" content="Precious Adedokun, Adedokun Precious, APCodeSphere, full stack developer, web development, AI, cybersecurity, automation, game development, UI/UX, SEO, best web developer in nigeria, robisson honour, whakee, apreeez, apreezofficial, ap, apcodesphere">
     <meta name="author" content="Precious Adedokun">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://apcodesphere.vercel.app/">
